<resources>
    <string name="app_name">BPMonitorBLEIntegration</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_60_bpm">60 bpm</string>
    <string name="lowest">Lowest:</string>
    <string name="heart_rate">Heart Rate:</string>
    <string name="diastolic">Diastolic:</string>
    <string name="systolic">Systolic:</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="highest">Highest:</string>
    <string name="analytics">Analytics</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="sys">Sys</string>
    <string name="dya">Dia</string>
    <string name="rate">Rate</string>
    <string name="disable_bluetooth">Disable bluetooth</string>
    <string name="manual_measurement">Manual Measurement</string>
    <string name="range_120_80">Range: 120 / 80</string>
    <string name="read">Read</string>
    <string name="status">Status</string>
    <string name="battery">Battery</string>
    <string name="map">MAP:</string>
    <string name="systolc">Systolic:</string>
    <string name="dyastolic">Diastolic:</string>
    <string name="heart_rate1">Heart Rate:</string>
    <string name="save">Save</string>
    <string name="all">All</string>
    <string name="logs">Logs</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="search_devices">Search devices</string>
    <string name="type_1">Type-1</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="select">Select</string>
    <string name="no_data_found">No Data Found</string>
    <string name="reset">reset</string>
    <string name="dashboard">DashBoard</string>
    <string name="welcome">Welcome</string>
    <string name="manual_reading">Manual Readings</string>
    <string name="readings">Readings</string>
    <string name="connect_device">Connect Device</string>
    <string name="ok">OK</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="share_reading">Share Reading…</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="please_start_again">Please start again!</string>
    <string name="please_connect_again">Something went wrong please connect again!!!</string>
    <string name="battery_low">Battery is low, Please Change battery</string>
    <string name="connection_terminated">Connection terminated!, please connect again</string>
    <string name="message">Message</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="enter_systolic_value">Please enter systolic value</string>
    <string name="enter_diastolic_value">Please enter diastolic value</string>
    <string name="enter_heart_rate">Please enter heart rate value</string>
    <string name="no_device_found">No devices found</string>
    <string name="bluetooth_not_enable">Bluetooth not enabled</string>
    <string name="select_start_date">Please select start date</string>
    <string name="select_end_date">Please select end date</string>
    <string name="are_you_sure_disable_bluetooth">Are you sure, disable bluetooth</string>
    <string name="cuff_replaced">Have you replaced the cuff ?</string>
    <string name="bluetooth_le_not_supported">BLUETOOTH_LE not supported in this device!</string>
    <string name="cuff_fitment">Indicates cuff placement/fitment incorrect!!!</string>
    <string name="try_again">Try again</string>
    <string name="hand_movement">Indicates hand movement detected!!!</string>
    <string name="irregular_heartbeat">Indicates irregular heartbeat during measurement!!!</string>
    <string name="cuff_over_pressured">Indicates cuff over pressurised!!!</string>
    <string name="low_battery">Indicates low battery!!!</string>
    <string name="cuff_replacement">Indicates Cuff replacement!!!</string>
    <string name="bluetooth_adapter_not_initialised">BluetoothAdapter not initialised</string>
    <string name="jan">JAN</string>
    <string name="feb">FEB</string>
    <string name="mar">MAR</string>
    <string name="apr">APR</string>
    <string name="may">MAY</string>
    <string name="jun">JUN</string>
    <string name="jly">JLY</string>
    <string name="aug">AUG</string>
    <string name="sep">SEP</string>
    <string name="oct">OCT</string>
    <string name="nov">NOV</string>
    <string name="dec">DEC</string>
    <string name="bloodpressure_reading">Blood Pressure Reading :</string>
    <string name="status_1">Status:</string>
    <string name="bp_for">Blood Pressure Readings For: </string>
    <string name="share_via">Share via</string>
    <string name="very_serious_hypotension">Very Serious Hypotension</string>
    <string name="serious_hypotension">Serious Hypotension</string>
    <string name="borderline_hypotension">Borderline Hypotension</string>
    <string name="low_bp">Low Blood Pressure</string>
    <string name="normal_bp">Normal Blood Pressure</string>
    <string name="high_normal_bp">High Normal Blood Pressure</string>
    <string name="hypertension_stage_1">Hypertension Stage 1</string>
    <string name="hypertension_stage_2">Hypertension Stage 2</string>
    <string name="hypertension_stage_3">Hypertension Stage 3</string>
    <string name="hypertension_stage_4">Hypertension Stage 4</string>
    <string name="saved">Saved</string>
    <string name="do_you_want_to_save_result">Do you want to save result?</string>
    <string name="logName">Name:</string>
    <string name="log_date">Date:</string>
    <string name="log_time">Time:</string>
    <string name="systolic_log">Systolic:</string>
    <string name="diastolic_log">Diastolic:</string>
    <string name="heartrate_log">Heart rate:</string>
    <string name="high_bp_crisis">High Blood Pressure Crisis</string>
    <string name="enter_map">Please enter map value</string>
    <string name="no_chart_data_available">No chart data available</string>
    <string name="systolic_range_fault">Systolic range should be between 30 t0 200, Please check the readings</string>
    <string name="diastolic_range_fault">Diastolic range should be between 40 to 120, Please check the readings</string>
    <string name="systolic_error">Systolic reading is not proper, Please start again</string>
    <string name="diastolic_error">Diastolic reading is not proper, Please start again</string>
    <string name="adapter_not_initialised">BluetoothAdapter not initialize or unspecified address</string>
    <string name="existing_connection">Try to use existing connection</string>
    <string name="connecting">Connecting…</string>
    <string name="cannot_connect">Cannot connect, Please check device connectivity…</string>
    <string name="device_not_found">Device not found </string>

</resources>