<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/logLinear_layout"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="12sp"
                    android:layout_weight="0.17"
                    android:gravity="center"
                    android:padding="5dp"/>
                <!--                    android:layout_marginRight="5dp"/>-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/time"
                    android:layout_weight="0.17"
                    android:gravity="center"
                    android:padding="5dp"/>
                <!--                    android:layout_marginRight="3dp"/>-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/sys"
                    android:layout_weight="0.17"
                    android:gravity="center"
                    android:padding="5dp"/>
                <!--                    android:layout_marginRight="3dp"/>-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dya"
                    android:textSize="12sp"
                    android:layout_weight="0.17"
                    android:gravity="center"
                    android:padding="5dp"/>
                <!--                    android:layout_marginRight="3dp"/>-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate"
                    android:textSize="12sp"
                    android:layout_weight="0.17"
                    android:gravity="center"
                    android:padding="5dp"/>
                <!--                    android:layout_marginRight="3dp"/>-->

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/log_list"
            android:layout_below="@+id/logLinear_layout"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="#ECEFF1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp">

        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/log_bottomNavigationView"
            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/log_list"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            app:itemIconTint="@drawable/navigation_item_color"
            app:itemTextColor="@drawable/navigation_item_color"
            app:menu="@menu/bottom_nav_menu" />

</RelativeLayout>