<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Statistics">

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="vertical"-->
<!--        android:layout_margin="10dp"-->
<!--        android:id="@+id/statistics_linear">-->

<!--        <com.google.android.material.tabs.TabLayout-->
<!--            android:id="@+id/tabLayout"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="1dp"-->
<!--            app:tabIndicatorColor="@color/colorAccent"-->
<!--            app:tabTextColor="@color/black">-->

<!--            <com.google.android.material.tabs.TabItem-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:padding="20dp"-->
<!--                android:text="Time wise" />-->

<!--            <com.google.android.material.tabs.TabItem-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:padding="20dp"-->
<!--                android:text="Date Wise" />-->
<!--        </com.google.android.material.tabs.TabLayout>-->

<!--        <androidx.viewpager.widget.ViewPager-->
<!--            android:id="@+id/viewPager"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_below="@id/tabLayout"-->
<!--            android:layout_centerInParent="true"-->
<!--            tools:layout_editor_absoluteX="8dp" />-->

<!--    </LinearLayout>-->
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="vertical"-->
<!--        android:visibility="visible"-->
<!--        android:weightSum="1"-->
<!--        android:layout_marginBottom="10dp">-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="0.9"
        android:layout_marginBottom="5dp"
        android:id="@+id/graph_selection_layout">
<!--        android:background="@color/cardview_shadow_end_color"-->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/time"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:gravity="center"
            android:id="@+id/new_week_label"
            android:clickable="true"
            android:background="#FFA500"
            android:textColor="@color/white"
            android:focusable="true" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/date"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:gravity="center"
            android:id="@+id/new_month_label"
            android:textColor="@color/black"
            android:background="@null"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/all"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:gravity="center"
            android:id="@+id/new_year_label"
            android:textColor="@color/black"
            android:background="@null"/>

    </LinearLayout>
<!--    </LinearLayout>-->

    <com.github.mikephil.charting.charts.CandleStickChart
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/candleStick"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/new_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">
    </androidx.viewpager.widget.ViewPager>

    <com.github.mikephil.charting.charts.CandleStickChart
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/candleStick1"
        android:layout_marginBottom="50dp" />

</LinearLayout>